fixed letter spacing on script class

--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@ body {
 	font-family: 'Pacifico', cursive;
 	color: inherit;
 	font-size: 1.1em;
+	letter-spacing: 0.05em;
 }
 
 .decor-hr {
